@@ -298,7 +298,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP540
        Canon PIXMA MP550
        Canon PIXMA MP600
-       Canon PIXMA MP800
+       Canon PIXMA MP800 (EXPERIMENTAL)
+       Canon PIXMA MP810 (EXPERIMENTAL)
        Canon PIXMA MP950
        Canon PIXMA MP960
        Canon PIXMA MP990
